--- a/html/WebSample.html
+++ b/html/WebSample.html
@@ -7,7 +7,7 @@
         <style type="text/css" media="screen"> 
             html, body  { height:100%; }
             body { margin:0; padding:0; overflow:auto; text-align:center; 
-                   background-color: #ffffff; }   
+                   background-color: #666666; }   
             object:focus { outline:none; }
             #flashContent { display:none; }
         </style>
@@ -37,7 +37,7 @@
             attributes.align = "middle";
             swfobject.embedSWF(
                 "WebSample.swf", "flashContent", 
-                "100%", "100%", 
+                "640", "480", 
                 swfVersionStr, xiSwfUrlStr, 
                 flashvars, params, attributes);
             // JavaScript enabled so display the flashContent div in case it is not replaced with a swf object.
